common/force-app/main/default/objects/Investment__c/fields/Account_Name_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_FORMULA__c</fullName>
    <formula>Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>