common/force-app/main/default/objects/Investment__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Day in which the investment was made active. When the money went from a VC Entity to the Vehicle.</description>
    <inlineHelpText>Day in which the investment was made active. When the money went from a VC Entity to the Vehicle.</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>