common/force-app/main/default/objects/Investment__c/fields/AFSL_License__c.field-meta.xml
<CustomField>
    <fullName>AFSL_License__c</fullName>
    <description>This is the related Product AFSL License, this is a formula field, if you need to change this, please do so in the product record.</description>
    <formula>TEXT(Opportunity__r.Invested_Product_ADMIN_FIELD__r.AFSL_Licence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the related Product AFSL License, this is a formula field, if you need to change this, please do so in the product record.</inlineHelpText>
    <label>AFSL License</label>
    <type>Text</type>
</CustomField>