common/force-app/main/default/objects/Investment__c/fields/Amount_of_Refund__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Refund__c</fullName>
    <label>Amount of Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>