common/force-app/main/default/objects/Investment__c/fields/Class_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Interest__c</fullName>
    <formula>TEXT(Opportunity__r.Invested_Product_ADMIN_FIELD__r.Type_of_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field from Product</inlineHelpText>
    <label>Class of Interest</label>
    <type>Text</type>
</CustomField>