common/force-app/main/default/objects/Investment__c/fields/Compounding_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Compounding_Frequency__c</fullName>
    <description>This is the type of return the interest rate have, this information is pulled from the product related to the opportunity, if you need to modify this selection, please do so in the product record.</description>
    <formula>TEXT(Opportunity__r.Invested_Product_ADMIN_FIELD__r.Compounding_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the type of return the interest rate have, this information is pulled from the product related to the opportunity, if you need to modify this selection, please do so in the product record.</inlineHelpText>
    <label>Compounding Frequency</label>
    <type>Text</type>
</CustomField>