common/force-app/main/default/objects/Investment__c/fields/Contribution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Fee__c</fullName>
    <description>This is the Contribution Fee from the Opportunity</description>
    <formula>Opportunity__r.Investor_Contribution_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a calculated field that brings the contribution fee value from the opportunity</inlineHelpText>
    <label>Contribution Fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>