common/force-app/main/default/objects/Investment__c/fields/Contribution_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Fee_Amount__c</fullName>
    <description>This is a calculated field that outputs the fee contribution % amount</description>
    <formula>Investment_Amount__c  *  Contribution_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a calculated field that outputs the fee contribution % amount</inlineHelpText>
    <label>Contribution Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>