common/force-app/main/default/objects/Investment__c/fields/Current_Holding_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Holding_Value__c</fullName>
    <formula>&quot;$&quot;
+
IF(LEN(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)))&gt;3,
    IF(LEN(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)))&gt;6,
        LEFT(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)),LEN(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)))-6)+&quot;,&quot;+LEFT(RIGHT(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)),6),3)+&quot;,&quot;+RIGHT(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)),3),
        LEFT(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)),LEN(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)))-3)+&quot;,&quot;+RIGHT(TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)),3)),
TEXT(MFLOOR(Opportunity_Product__r.Current_Investment_Value__c)))
+
IF(MOD(Opportunity_Product__r.Current_Investment_Value__c , 1) = 0,&apos;.00&apos;,TEXT(MOD(Opportunity_Product__r.Current_Investment_Value__c , 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Holding Value</label>
    <type>Text</type>
</CustomField>