common/force-app/main/default/objects/Investment__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <formula>&quot;$&quot;
+
IF(LEN(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)))&gt;3,
    IF(LEN(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)))&gt;6,
        LEFT(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)),LEN(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)))-6)+&quot;,&quot;+LEFT(RIGHT(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)),6),3)+&quot;,&quot;+RIGHT(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)),3),
        LEFT(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)),LEN(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)))-3)+&quot;,&quot;+RIGHT(TEXT(MFLOOR(Opportunity_Product__r.ListPrice)),3)),
TEXT(MFLOOR(Opportunity_Product__r.ListPrice)))
+
IF(MOD(Opportunity_Product__r.ListPrice , 1) = 0,&apos;.00&apos;,TEXT(MOD(Opportunity_Product__r.ListPrice , 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Value</label>
    <type>Text</type>
</CustomField>