common/force-app/main/default/objects/Investment__c/fields/Customer_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Customer_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Refunded</label>
    <type>Checkbox</type>
</CustomField>