common/force-app/main/default/objects/Investment__c/fields/Date_Refund_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Refund_Requested__c</fullName>
    <description>This field is updated in the LWC pipoInvestmentSupport</description>
    <inlineHelpText>Date requested for the investor in the portal</inlineHelpText>
    <label>Date Refund Requested</label>
    <type>Date</type>
</CustomField>