common/force-app/main/default/objects/Investment__c/fields/Defined_Term__c.field-meta.xml
<CustomField>
    <fullName>Defined_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defined Term</label>
    <type>Checkbox</type>
</CustomField>