common/force-app/main/default/objects/Investment__c/fields/EIC_Startup__c.field-meta.xml
<CustomField>
    <fullName>EIC_Startup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EIC Startup</label>
    <type>Checkbox</type>
</CustomField>