common/force-app/main/default/objects/Investment__c/fields/Existing_Interest__c.field-meta.xml
<CustomField>
    <fullName>Existing_Interest__c</fullName>
    <inlineHelpText>Used to hold existing value so we can make a total with Accrued interest</inlineHelpText>
    <label>Existing Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>