common/force-app/main/default/objects/Investment__c/fields/Funds_Deposited_Confirmation_from_Client__c.field-meta.xml
<CustomField>
    <fullName>Funds_Deposited_Confirmation_from_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funds Deposited Confirmation from Client</label>
    <type>Checkbox</type>
</CustomField>