common/force-app/main/default/objects/Investment__c/fields/Funds_Received__c.field-meta.xml
<CustomField>
    <fullName>Funds_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;Funds Received in Bank&quot; from opportunity</description>
    <label>Funds Received</label>
    <type>Checkbox</type>
</CustomField>