common/force-app/main/default/objects/Investment__c/fields/Funds_Received_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Funds_Received_FORMULA__c</fullName>
    <formula>IF( Funds_Received__c = TRUE, &quot;Funds Received&quot;, &quot;Funds Not Received&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds Received_FORMULA</label>
    <type>Text</type>
</CustomField>