common/force-app/main/default/objects/Investment__c/fields/Funds_Received_in_Bank__c.field-meta.xml
<CustomField>
    <fullName>Funds_Received_in_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funds Received in Bank</label>
    <type>Checkbox</type>
</CustomField>