common/force-app/main/default/objects/Investment__c/fields/Generating_interest__c.field-meta.xml
<CustomField>
    <fullName>Generating_interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to know if the investment is generating interest or no</description>
    <inlineHelpText>Checkbox to know if the investment is generating interest or no</inlineHelpText>
    <label>Generating interest</label>
    <type>Checkbox</type>
</CustomField>