common/force-app/main/default/objects/Investment__c/fields/Holding_Trust_Number__c.field-meta.xml
<CustomField>
    <fullName>Holding_Trust_Number__c</fullName>
    <formula>Opportunity__r.Invested_Product_ADMIN_FIELD__r.Holding_Trust_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holding Trust Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>