common/force-app/main/default/objects/Investment__c/fields/Initial_Term_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Expiry__c</fullName>
    <label>Initial Term/Expiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>