common/force-app/main/default/objects/Investment__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>This si the Interest Rate Brought from the product info related to the opportunity</description>
    <formula>Opportunity__r.Invested_Product_ADMIN_FIELD__r.Interest_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This si the Interest Rate Brought from the product info related to the opportunity, this can&apos;t be modified in the Investment Information, if you need to update, please go to the product record.</inlineHelpText>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>