common/force-app/main/default/objects/Investment__c/fields/Investment_Amount_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount_FORMULA__c</fullName>
    <description>This field will be used in Investor Portal CMS card. Created to Maintain g the currency field format as $ symbol is missing in regular currency field.</description>
    <formula>&quot;$&quot; 
+
IF(LEN(TEXT(MFLOOR(Investment_Amount__c)))&gt;3,   
    IF(LEN(TEXT(MFLOOR(Investment_Amount__c)))&gt;6,
        LEFT(TEXT(MFLOOR(Investment_Amount__c)),LEN(TEXT(MFLOOR(Investment_Amount__c)))-6)+&quot;,&quot;+LEFT(RIGHT(TEXT(MFLOOR(Investment_Amount__c)),6),3)+&quot;,&quot;+RIGHT(TEXT(MFLOOR(Investment_Amount__c)),3),
        LEFT(TEXT(MFLOOR(Investment_Amount__c)),LEN(TEXT(MFLOOR(Investment_Amount__c)))-3)+&quot;,&quot;+RIGHT(TEXT(MFLOOR(Investment_Amount__c)),3)),
    TEXT(MFLOOR(Investment_Amount__c)))
+
IF(MOD(Investment_Amount__c , 1) = 0,&apos;.00&apos;,TEXT(MOD(Investment_Amount__c , 1)))</formula>
    <label>Investment Amount</label>
    <type>Text</type>
</CustomField>