common/force-app/main/default/objects/Investment__c/fields/Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Investment_Date__c</fullName>
    <description>&quot;Close Date&quot; of opportunity</description>
    <label>Investment Date</label>
    <type>Date</type>
</CustomField>