common/force-app/main/default/objects/Investment__c/fields/Investment_ID_18_character__c.field-meta.xml
<CustomField>
    <fullName>Investment_ID_18_character__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment ID 18 character</label>
    <type>Text</type>
</CustomField>