common/force-app/main/default/objects/Investment__c/fields/Investment_Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>Investment_Opp_ID__c</fullName>
    <description>The Opportunity ID</description>
    <label>Investment ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>