common/force-app/main/default/objects/Investment__c/fields/Investment_Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Investment_Product_Image__c</fullName>
    <label>Investment Product Image</label>
    <type>Url</type>
</CustomField>