common/force-app/main/default/objects/Investment__c/fields/Investment_Product_Image_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Investment_Product_Image_FORMULA__c</fullName>
    <formula>Opportunity_Product__r.PricebookEntry.Product2.DisplayUrl</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Product Image FORMULA</label>
    <type>Text</type>
</CustomField>