common/force-app/main/default/objects/Investment__c/fields/Investment_Product_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Investment_Product_Name_Formula__c</fullName>
    <formula>Opportunity_Product__r.PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Product Name</label>
    <type>Text</type>
</CustomField>