common/force-app/main/default/objects/Investment__c/fields/Investment_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Product_Type__c</fullName>
    <label>Investment Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>