common/force-app/main/default/objects/Investment__c/fields/Investment_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Investment_SF_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment SF ID</label>
    <type>Text</type>
</CustomField>