common/force-app/main/default/objects/Investment__c/fields/Investment_Stages__c.field-meta.xml
<CustomField>
    <fullName>Investment_Stages__c</fullName>
    <label>Investment Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>