common/force-app/main/default/objects/Investment__c/fields/Investment_Status__c.field-meta.xml
<CustomField>
    <fullName>Investment_Status__c</fullName>
    <formula>IF( Process_Fund_Disbursement__c = FALSE, &apos;Active&apos;, &apos;Pending&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Status</label>
    <type>Text</type>
</CustomField>