common/force-app/main/default/objects/Investment__c/fields/invSub_Status__c.field-meta.xml
<CustomField>
    <fullName>invSub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Investment_Stages__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Investment_Sub_Stages</valueSetName>
    </valueSet>
</CustomField>