common/force-app/main/default/objects/Investment__c/fields/Is_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Account__c</fullName>
    <formula>Account__r.IsPersonAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>