common/force-app/main/default/objects/Investment__c/fields/Last_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field that gets updated through a flow to get the last transaction associated with this investment</description>
    <inlineHelpText>This is a lookup field that gets updated through a flow to get the last transaction associated with this investment</inlineHelpText>
    <label>Last Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>