common/force-app/main/default/objects/Investment__c/fields/Last_Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Description__c</fullName>
    <description>Calculated field that brings the last transaction description, gets updated automatically</description>
    <formula>Last_Transaction__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated field that brings the last transaction description, gets updated automatically</inlineHelpText>
    <label>Last Transaction Description</label>
    <type>Text</type>
</CustomField>