common/force-app/main/default/objects/Investment__c/fields/Maturation_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturation_Date__c</fullName>
    <formula>IF(
    ISPICKVAL(  Opportunity__r.Invested_Product_ADMIN_FIELD__r.Type_of_Interest__c,&quot;Ordinary Shares&quot;) || 
    ISPICKVAL(  Opportunity__r.Invested_Product_ADMIN_FIELD__r.Type_of_Interest__c,&quot;Ordinary Equity&quot;) || 
    ISPICKVAL(  Opportunity__r.Invested_Product_ADMIN_FIELD__r.Type_of_Interest__c,&quot;Ordinary Units&quot;) ||
    ISPICKVAL(  Opportunity__r.Invested_Product_ADMIN_FIELD__r.Term_Expiry__c ,&quot;Undefined&quot;),
    
null,Opportunity__r.Maturation_Date__c)</formula>
    <label>Maturation Date</label>
    <type>Date</type>
</CustomField>