common/force-app/main/default/objects/Investment__c/fields/Maturation_date_update_email__c.field-meta.xml
<CustomField>
    <fullName>Maturation_date_update_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maturation date update email</label>
    <type>Checkbox</type>
</CustomField>