common/force-app/main/default/objects/Investment__c/fields/Old_Redemption_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Old_Redemption_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Redemption Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Investments (Old Redemption Opportunity)</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>