common/force-app/main/default/objects/Investment__c/fields/Original_Unit_Certificate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Unit_Certificate_Amount__c</fullName>
    <label>Original Unit Certificate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>