common/force-app/main/default/objects/Investment__c/fields/PA_CRN__c.field-meta.xml
<CustomField>
    <fullName>PA_CRN__c</fullName>
    <label>PA CRN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>