common/force-app/main/default/objects/Investment__c/fields/Pre_Emptive_Rights_Description__c.field-meta.xml
<CustomField>
    <fullName>Pre_Emptive_Rights_Description__c</fullName>
    <description>Pre-Emptive Rights Description, brought from the Product associated to the Opportunity</description>
    <formula>Opportunity__r.Invested_Product_ADMIN_FIELD__r.Pre_Emptive_Rights_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pre-Emptive Rights Description, brought from the Product associated to the Opportunity</inlineHelpText>
    <label>Pre-Emptive Rights Description</label>
    <type>Text</type>
</CustomField>