common/force-app/main/default/objects/Investment__c/fields/Primary_Contact_ID_Checked__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact ID Checked</label>
    <type>Checkbox</type>
</CustomField>