common/force-app/main/default/objects/Investment__c/fields/Process_Fund_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Process_Fund_Disbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field will be utilised when the partial/full fund is disbursed.</description>
    <inlineHelpText>checking the box will effect the portfolio summary on investor portal</inlineHelpText>
    <label>Process Fund Disbursement</label>
    <type>Checkbox</type>
</CustomField>