common/force-app/main/default/objects/Investment__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product Code Brought from the Opportunity related product</description>
    <formula>Opportunity__r.Invested_Product_ADMIN_FIELD__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Code Brought from the Opportunity related product</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>