common/force-app/main/default/objects/Investment__c/fields/Purchased_Shares__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Shares__c</fullName>
    <label>Investment Holding</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>