common/force-app/main/default/objects/Investment__c/fields/Reason_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reason_Refund__c</fullName>
    <description>This field is used to track the reason of the refund</description>
    <inlineHelpText>Please specify the customer reason for the refund</inlineHelpText>
    <label>Reason Refund</label>
    <type>TextArea</type>
</CustomField>