common/force-app/main/default/objects/Investment__c/fields/Redemption_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Request_Date__c</fullName>
    <label>Redemption Request Date</label>
    <type>Date</type>
</CustomField>