common/force-app/main/default/objects/Investment__c/fields/Refund_Requested__c.field-meta.xml
<CustomField>
    <fullName>Refund_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Requested</label>
    <type>Checkbox</type>
</CustomField>