common/force-app/main/default/objects/Investment__c/fields/Related_product__c.field-meta.xml
<CustomField>
    <fullName>Related_product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related product</description>
    <label>Related product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>