common/force-app/main/default/objects/Investment__c/fields/Related_VC_Entity__c.field-meta.xml
<CustomField>
    <fullName>Related_VC_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related VC Entity</label>
    <referenceTo>VC_Entity__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>