common/force-app/main/default/objects/Investment__c/fields/Rollover_Investment__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Investment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollover Investment</label>
    <type>Checkbox</type>
</CustomField>