common/force-app/main/default/objects/Investment__c/fields/Securities_Held__c.field-meta.xml
<CustomField>
    <fullName>Securities_Held__c</fullName>
    <description>This is a FE fields created to remove decimal places when the values is 0000</description>
    <formula>IF(LEN(TEXT(MFLOOR(Purchased_Shares__c)))&gt;3,
    IF(LEN(TEXT(MFLOOR(Purchased_Shares__c)))&gt;6,
        LEFT(TEXT(MFLOOR(Purchased_Shares__c)),LEN(TEXT(MFLOOR(Purchased_Shares__c)))-6)+&quot;,&quot;+LEFT(RIGHT(TEXT(MFLOOR(Purchased_Shares__c)),6),3)+&quot;,&quot;+RIGHT(TEXT(MFLOOR(Purchased_Shares__c)),3),
        LEFT(TEXT(MFLOOR(Purchased_Shares__c)),LEN(TEXT(MFLOOR(Purchased_Shares__c)))-3)+&quot;,&quot;+RIGHT(TEXT(MFLOOR(Purchased_Shares__c)),3)),
TEXT(MFLOOR(Purchased_Shares__c)))
+
IF(MOD(Purchased_Shares__c , 1) = 0,&apos;.00&apos;,TEXT(MOD(Purchased_Shares__c , 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Securities Held</label>
    <type>Text</type>
</CustomField>