common/force-app/main/default/objects/Investment__c/fields/Securities_held_after_transaction__c.field-meta.xml
<CustomField>
    <fullName>Securities_held_after_transaction__c</fullName>
    <inlineHelpText>This field shows the amount left after the historic redemption sheet update on 02/07/2024.
We can use this to display current holding/value in the portal along with investment status</inlineHelpText>
    <label>Securities held after transaction</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>