common/force-app/main/default/objects/Investment__c/fields/Send_Unit_Cert_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Unit_Cert_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Unit Cert Email</label>
    <type>Checkbox</type>
</CustomField>