common/force-app/main/default/objects/Investment__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Product Maturity Date - Investment Activation Date</description>
    <formula>IF(
    Opportunity__r.Invested_Product_ADMIN_FIELD__r.Maturity_Date__c &gt; Activation_Date__c,
    TEXT(FLOOR((Opportunity__r.Invested_Product_ADMIN_FIELD__r.Maturity_Date__c - Activation_Date__c) / 30)) &amp; &quot; months and &quot; &amp; 
    TEXT(MOD(Opportunity__r.Invested_Product_ADMIN_FIELD__r.Maturity_Date__c - Activation_Date__c, 30)) &amp; &quot; days&quot;,
    &quot;Activation date must be before the Maturity date&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Maturity Date - Investment Activation Date</inlineHelpText>
    <label>Term</label>
    <type>Text</type>
</CustomField>