common/force-app/main/default/objects/Investment__c/fields/Term_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Term_Expiry__c</fullName>
    <formula>TEXT(Opportunity__r.Invested_Product_ADMIN_FIELD__r.Term_Expiry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Term Expiry from Product</inlineHelpText>
    <label>Term Expiry</label>
    <type>Text</type>
</CustomField>