common/force-app/main/default/objects/Investment__c/fields/Term_Left__c.field-meta.xml
<CustomField>
    <fullName>Term_Left__c</fullName>
    <description>Term left in the investment</description>
    <formula>IF(
    Opportunity__r.Invested_Product_ADMIN_FIELD__r.Maturity_Date__c &gt; TODAY(),
    TEXT(FLOOR((Opportunity__r.Invested_Product_ADMIN_FIELD__r.Maturity_Date__c - TODAY()) / 30)) &amp; &quot; months and &quot; &amp; 
    TEXT(MOD(Opportunity__r.Invested_Product_ADMIN_FIELD__r.Maturity_Date__c - TODAY(), 30)) &amp; &quot; days&quot;,
    &quot;Past Date&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Term left in the investment from the Present Day to the Maturity Date of the Investment.</inlineHelpText>
    <label>Term Left</label>
    <type>Text</type>
</CustomField>