common/force-app/main/default/objects/Investment__c/fields/Total_Interest_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Accrued__c</fullName>
    <formula>Accrued_Interest__c +  Existing_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>